--- a/tests/php-unix.ini
+++ b/tests/php-unix.ini
@@ -1,8 +1,6 @@
 [PHP]
-extension=json.so
-extension=tokenizer.so
-extension=ctype.so
-extension=mysqlnd.so
-extension=mysqli.so
-
-[Zend]
+;extension=json.so
+;extension=tokenizer.so
+;extension=ctype.so
+;extension=mysqlnd.so
+;extension=mysqli.so
