--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ matrix:
       env: COMPOSER_FLAG=--prefer-lowest
     - php: 7.0
       env: COMPOSER_FLAG=--prefer-stable
+    - php: 7.1
+      env: COMPOSER_FLAG=--prefer-lowest
+    - php: 7.1
+      env: COMPOSER_FLAG=--prefer-stable
 
 sudo: false
 
