--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
 language: php
 php:
-  - 7.1
   - 7.2
   - 7.3
+  - 7.4snapshot
+  - nightly
 
-before_install:
-  # Turn off XDebug
-  - phpenv config-rm xdebug.ini || return 0
-
-install:
-  # Composer
-  - travis_retry composer install --no-progress --prefer-dist
+services:
+  - mysql
 
 before_script:
   # Setup MySQL
@@ -18,51 +14,51 @@ before_script:
   - mysql -u travis nextras < tests/fixtures/mysql.sql
   - mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql -u root mysql
 
+  # Xdebug
+  - phpenv config-rm xdebug.ini || return 0
+
+install:
+  - travis_retry composer install --no-progress --prefer-dist # Install dependencies
+
 script:
-  # Tests
-  - composer run-script tests
+  - make tests # Tests
 
 after_failure:
-  # Print *.actual content
-  - for i in $(find tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
+  - for i in $(find tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done # Print *.actual content
 
 jobs:
   include:
-    - env: title="Lowest Dependencies 7.1"
-      php: 7.1
+    - env: title="Lowest Dependencies 7.2"
+      php: 7.2
       install:
-        - travis_retry composer update --no-progress --prefer-dist --prefer-lowest
+        - travis_retry composer update --no-progress --prefer-dist --prefer-lowest --prefer-stable
       script:
-        - composer run-script tests
+        - make tests
 
     - stage: Quality Assurance
-      php: 7.1
+      php: 7.3
       script:
-        - composer run-script qa
-
-    - stage: Phpstan
-      php: 7.1
-      script:
-        - composer run-script phpstan-install
-        - composer run-script phpstan
+        - make qa
 
     - stage: Test Coverage
       if: branch = master AND type = push
-      php: 7.1
+      php: 7.3
       script:
-        - composer run-script coverage
+        - make coverage
       after_script:
-        - wget https://github.com/php-coveralls/php-coveralls/releases/download/v2.1.0/php-coveralls.phar
-        - php php-coveralls.phar --verbose --config tests/.coveralls.yml
+        - composer global require php-coveralls/php-coveralls ^2.1.0
+        - ~/.composer/vendor/bin/php-coveralls --verbose --config tests/.coveralls.yml
 
     - stage: Outdated Dependencies
       if: branch = master AND type = cron
-      php: 7.1
+      php: 7.3
       script:
-        - composer outdated --direct --strict
+        - composer outdated --direct
 
   allow_failures:
     - stage: Test Coverage
+    - php: 7.4snapshot
+    - php: nightly
 
 sudo: false
 
