--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,19 @@
     }
   ],
   "require": {
-    "php": ">= 7.1",
-    "nextras/dbal": "^3.0.0"
+    "php": "^7.2",
+    "nextras/dbal": "^3.1.1"
   },
   "require-dev": {
-    "ninjify/qa": "^0.8.0",
-    "ninjify/nunjuck": "^0.2.0",
-    "nette/di": "~2.4.12",
-    "nextras/orm": "^3.0.0",
-    "mockery/mockery": "^1.1.0"
+    "ninjify/qa": "^0.10.0",
+    "ninjify/nunjuck": "^0.3.0",
+    "nette/di": "~3.0.1",
+    "nextras/orm": "^3.1.0",
+    "mockery/mockery": "^1.3.0",
+    "phpstan/phpstan": "^0.12.0",
+    "phpstan/phpstan-strict-rules": "^0.12.0",
+    "phpstan/phpstan-deprecation-rules": "^0.12.0",
+    "phpstan/phpstan-nette": "^0.12.0"
   },
   "autoload": {
     "psr-4": {
@@ -33,28 +37,6 @@
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
-  "scripts": {
-    "qa": [
-      "linter src tests",
-      "codesniffer src tests"
-    ],
-    "tests": [
-      "tester -s -p php --colors 1 -C tests/cases"
-    ],
-    "coverage": [
-      "tester -s -p phpdbg --colors 1 -C --coverage ./coverage.xml --coverage-src ./src tests/cases"
-    ],
-    "phpstan-install": [
-      "mkdir -p temp/phpstan",
-      "composer require -d temp/phpstan phpstan/phpstan:^0.10",
-      "composer require -d temp/phpstan phpstan/phpstan-deprecation-rules:^0.10",
-      "composer require -d temp/phpstan phpstan/phpstan-nette:^0.10",
-      "composer require -d temp/phpstan phpstan/phpstan-strict-rules:^0.10"
-    ],
-    "phpstan": [
-      "temp/phpstan/vendor/bin/phpstan analyse -l max -c phpstan.neon src"
-    ]
-  },
   "extra": {
     "branch-alias": {
       "dev-develop": "0.2.x-dev"
