--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
-      "dev-develop": "0.2.x-dev"
+      "dev-master": "0.4.x-dev"
     }
   }
 }
