--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": ">=7.2",
     "nextras/dbal": "^3.1.1"
   },
   "require-dev": {
-    "ninjify/qa": "^0.10.0",
-    "ninjify/nunjuck": "^0.3.0",
+    "ninjify/qa": "^0.12.",
+    "ninjify/nunjuck": "^0.4",
     "nette/di": "~3.0.1",
     "nextras/orm": "^3.1.0",
     "mockery/mockery": "^1.3.0",
