--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,18 @@
   ],
   "require": {
     "php": ">=7.2",
-    "nextras/dbal": "^3.1.1"
+    "nextras/dbal": "^4.0.0"
   },
   "require-dev": {
-    "ninjify/qa": "^0.12.",
+    "ninjify/qa": "^0.13",
     "ninjify/nunjuck": "^0.4",
-    "nette/di": "~3.0.1",
-    "nextras/orm": "^3.1.0",
+    "nette/di": "^3.0.1",
+    "nextras/orm": "^4.0.0",
     "mockery/mockery": "^1.3.0",
-    "phpstan/phpstan": "^0.12.0",
-    "phpstan/phpstan-strict-rules": "^0.12.0",
-    "phpstan/phpstan-deprecation-rules": "^0.12.0",
-    "phpstan/phpstan-nette": "^0.12.0"
+    "phpstan/phpstan": "^1.0.0",
+    "phpstan/phpstan-strict-rules": "^1.0.0",
+    "phpstan/phpstan-deprecation-rules": "^1.0.0",
+    "phpstan/phpstan-nette": "^1.0.0"
   },
   "autoload": {
     "psr-4": {
@@ -39,7 +39,7 @@
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
-      "dev-master": "0.4.x-dev"
+      "dev-master": "0.5.x-dev"
     }
   }
 }
